AWS/VPC_Peering/sec_group_bastion.tf
resource "aws_security_group" "allow_tls_bastion" {
  name        = "allow_tls2"
  description = "Allow TLS inbound traffic"
  vpc_id = "${aws_vpc.dev.id}"
  

  ingress {  
    description = "TLS from VPC"
    from_port   = 22 
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
 
 
  egress {    
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags ="${var.tags}"
}
